# riparr

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SETUP.md  TRUENAS_DEPLOYMENT.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
backend/: __init__.py  app.py  auth_service.py  config.py  download_service.py  jellyfin_service.py  models.py  musicbrainz_service.py  streamrip_service.py
backend/tests/: test_app.py
config/: streamrip.toml.example
frontend/static/: app.js  style.css
frontend/templates/: index.html
instance/: riparr.db
streamrip-test/: app.py  requirements.txt
