[project]
name = "riparr"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "eventlet==0.35.2",
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "flask-login==0.6.3",
    "flask-socketio==5.3.6",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==21.2.0",
    "musicbrainzngs==0.7.1",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "streamrip==2.1.0",
]
