[project]
name = "riparr"
version = "0.1.0"
license = { text = "GPL-3.0-or-later" }
requires-python = "==3.11.*"
dependencies = [
    "eventlet==0.35.2",
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "flask-login==0.6.3",
    "flask-socketio==5.3.6",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==21.2.0",
    "musicbrainzngs==0.7.1",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "streamrip==2.1.0",
]

[dependency-groups]
dev = ["pytest==7.4.3", "ruff==0.1.6"]

[tool.ruff]
line-length = 120
select = ["E", "F", "B"]
ignore = ["E501", "E402", "E722", "E701", "B007", "B904"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = "test_*.py"
